@@ -69,7 +69,8 @@ sub _init
 
 	$self->{'repositorySections'} = ['main', 'universe', 'multiverse'];
 	$self->{'preRequiredPackages'} = [
-		'aptitude', 'debconf-utils', 'dialog', 'liblist-moreutils-perl', 'libxml-simple-perl', 'wget', 'resolvconf'
+		'aptitude', 'debconf-utils', 'dialog', 'liblist-moreutils-perl', 'libxml-simple-perl', 'wget', 'resolvconf',
+		'rsync'
 	];
 
 	if(iMSCP::LsbRelease->getInstance()->getRelease(1) < 12.10) {
