@@ -220,6 +220,7 @@ CMD_PERL = /usr/bin/perl
 CMD_PHP = /usr/bin/php5
 CMD_RKHUNTER = /usr/bin/rkhunter
 CMD_RM = /bin/rm
+CMD_RSYNC = /usr/bin/rsync
 CMD_SHELL = /bin/sh
 CMD_PKILL = /usr/bin/pkill
 CMD_TAR = /bin/tar
