@@ -1430,10 +1430,9 @@ sub setupServerIps
 	return $rs if $rs;
 
 	# Ensure promoting of secondary IP addresses in case a PRIMARY addresse is being deleted
+	# Note we are ignoring return value here (eg for vps)
 	my ($stdout, $stderr);
-	$rs = execute("$main::imscpConfig{'CMD_SYSCTL'} -q net.ipv4.conf.all.promote_secondaries=1", \$stdout, \$stderr);
-	error($stderr) if $stderr && $rs;
-	return $rs if $rs;
+	execute("$main::imscpConfig{'CMD_SYSCTL'} -q -w net.ipv4.conf.all.promote_secondaries=1", \$stdout, \$stderr);
 
 	my ($database, $errstr) = setupGetSqlConnect(setupGetQuestion('DATABASE_NAME'));
 	if(! $database) {
