@@ -4,6 +4,10 @@
 Git 1.1.x
 ------------------------------------------------------------------------------------------------------------------------
 
+INSTALLER
+	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
+	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )
+
 ------------------------------------------------------------------------------------------------------------------------
 1.1.20
 ------------------------------------------------------------------------------------------------------------------------
